--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Langchain
+spring.application.name=AlgoBot
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl = false
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
@@ -12,10 +12,14 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 #import datasource url, username, pwd from db.properties file
 spring.config.import = file:/Users/PC/Desktop/Graduation-Thesis/db.properties
-spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=llama3.1
-spring.ai.ollama.chat.options.temperature=0.7
 
 # Increase the maximum file upload size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+server.port=8080
+server.address=0.0.0.0
+spring.mvc.cors.allowed-origins=http://localhost:4200/
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
